# cb-voice-box

./: .gitignore  README.md  cb_voice_box.py  requirements.txt
.github/workflows/: build.yml
docs/: WIRING.md
firmware/cb-voice-box/: CMakeLists.txt  README.md  cb_voice_box_audio_only.uf2  cb_voice_box_audio_only_fixed_sck.uf2  cb_voice_box_clock_corrected_ptt.uf2  cb_voice_box_master_capture_ptt.uf2  cb_voice_box_pcm1808_audio.uf2  cb_voice_box_pcm_master_response_test.uf2  cb_voice_box_ptt_audio_diagnostic.uf2  cb_voice_box_sck_fix_identifiable_audio_only.uf2  cb_voice_box_sck_wire_test_audio_only.uf2  cb_voice_box_tone_test.uf2
firmware/cb-voice-box/src/: main.c  pcm1808_i2s.pio  tusb_config.h  usb_descriptors.c
